@startuml

title __SERVICE's Class Diagram__\n

  package sample {
    package sample.service {
      interface SimulationService {
          {abstract} + startSimulation()
          {abstract} + changeSimulationInfo()
          {abstract} + stopSimulation()
          {abstract} + init()
          {abstract} + isSimulating()
          {abstract} + headAndSizes()
          {abstract} + changeLight()
      }
    }
  }
  

  package sample {
    package sample.service {
      class SimulationServiceImpl {
          - isSimulating : boolean
          - spawnDisposables : List<Disposable>
          - traffigLightsDisposables : List<Disposable>
          - carMover : List<Disposable>
          - dtos : Set<NodeDto>
          - stopped : Boolean
          + SimulationServiceImpl()
          + startSimulation()
          + changeSimulationInfo()
          - setSpawnStreams()
          + stopSimulation()
          + init()
          - getNodes()
          - spawnCars()
          + headAndSizes()
          + changeLight()
          + isSimulating()
          - clearCache()
      }
    }
  }
  

  SimulationServiceImpl -up-|> SimulationService
  SimulationServiceImpl o-- SimulationInfo : simulationInfo


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
